--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section class="bg"></section>
+    <section class="image-container">
+    </section>
     <section class="form">
         <h1>Get Started!</h1>
         <form action="">
