--- a/index.html
+++ b/index.html
@@ -9,48 +9,60 @@
 <body>
     <section class="image-container">
     </section>
-    <section class="form">
+    <section class="form-section">
         <h1>Get Started!</h1>
         <form action="">
             <div class="form-row">
-                <label for="first-name">first name</label>
-                <input
-                    id="first-name"
-                    name="first-name"
-                    placeholder="Yondu" 
-                    type="text">
-                <label for="last-name">last name</label>
-                <input 
-                    id="last-name"
-                    name="last-name"
-                    placeholder="Star" 
-                    type="text">
+                <div class="form-input">
+                    <label for="first-name">first name</label>
+                    <input
+                        id="first-name"
+                        name="first-name"
+                        placeholder="Yondu" 
+                        type="text">
+                </div>
+                <div class="form-input">
+                    <label for="last-name">last name</label>
+                    <input 
+                        id="last-name"
+                        name="last-name"
+                        placeholder="Star" 
+                        type="text">
+                </div>
             </div>
             <div class="form-row">
-                <label for="email">email</label>
-                <input
-                    id="email"
-                    name="email"
-                    placeholder="YonduStar14@mymail.com" 
-                    type="email">
-                <label for="phone">phone</label>
-                <input 
-                    id="phone"
-                    name="phone"
-                    placeholder="8(933)734-20-05" 
-                    type="tel">
+                <div class="form-input">
+                    <label for="email">email</label>
+                    <input
+                        id="email"
+                        name="email"
+                        placeholder="YonduStar14@mymail.com" 
+                        type="email">
+                </div>
+                <div class="form-input">
+                    <label for="phone">phone</label>
+                    <input 
+                        id="phone"
+                        name="phone"
+                        placeholder="8(933)734-20-05" 
+                        type="tel">
+                </div>
             </div>
             <div class="form-row">
-                <label for="pwd">password</label>
-                <input
-                    id="pwd"
-                    name="pwd" 
-                    type="password">
-                <label for="pwd-confirm">confirm password</label>
-                <input
-                    id="pwd-confirm"
-                    name="pwd-confirm" 
-                    type="password">
+                <div class="form-input">
+                    <label for="pwd">password</label>
+                    <input
+                        id="pwd"
+                        name="pwd" 
+                        type="password">
+                </div>
+                <div class="form-input">
+                    <label for="pwd-confirm">confirm password</label>
+                    <input
+                        id="pwd-confirm"
+                        name="pwd-confirm" 
+                        type="password">
+                </div>
             </div>
             <div class="create-account">
                 <button type="submit" value="submit">create account</button>
