--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <section class="image-container">
+        <div class="logo-container">
+            <img class="logo" src="/img/logo.png" alt="Logo in synthwave style with palms on the beach">
+            <h2 class="company-name">triangle<span class="trademark">&trade;</span></h2>
+        </div>
     </section>
     <section class="form-section">
         <h1>Get Started!</h1>
