Change and add styling for inputs
Add required attributes for inputs
Change font-families to Quicksand and Bebas Neue

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Now</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,7 +26,8 @@
                         id="first-name"
                         name="first-name"
                         placeholder="Yondu" 
-                        type="text">
+                        type="text"
+                        required>
                 </div>
                 <div class="form-input">
                     <label for="last-name">last name</label>
@@ -31,7 +35,8 @@
                         id="last-name"
                         name="last-name"
                         placeholder="Star" 
-                        type="text">
+                        type="text"
+                        required>
                 </div>
             </div>
             <div class="form-row">
@@ -41,7 +46,8 @@
                         id="email"
                         name="email"
                         placeholder="YonduStar14@mymail.com" 
-                        type="email">
+                        type="email"
+                        required>
                 </div>
                 <div class="form-input">
                     <label for="phone">phone</label>
@@ -58,14 +64,16 @@
                     <input
                         id="pwd"
                         name="pwd" 
-                        type="password">
+                        type="password"
+                        required>
                 </div>
                 <div class="form-input">
                     <label for="pwd-confirm">confirm password</label>
                     <input
                         id="pwd-confirm"
                         name="pwd-confirm" 
-                        type="password">
+                        type="password"
+                        required>
                 </div>
             </div>
             <div class="create-account">
