Add input validation styling

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         id="pwd"
                         name="pwd" 
                         type="password"
+                        placeholder=""
                         required>
                 </div>
                 <div class="form-input">
@@ -73,6 +74,7 @@
                         id="pwd-confirm"
                         name="pwd-confirm" 
                         type="password"
+                        placeholder=""
                         required>
                 </div>
             </div>
