Fix the bug when imgs won't load

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="image-container">
         <div class="logo-container">
-            <img class="logo" src="/img/logo.png" alt="Logo in synthwave style with palms on the beach">
+            <img class="logo" src="./img/logo.png" alt="Logo in synthwave style with palms on the beach">
             <h2 class="company-name">triangle<span class="trademark">&trade;</span></h2>
         </div>
     </section>
